--- a/CSS/vezba1.html
+++ b/CSS/vezba1.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="vezba1.css">
+    <style>
+            @import url('https://fonts.googleapis.com/css?family=Fascinate+Inline');
+    </style>
+    
     <title>Document</title>
 </head>
 <body>
