Zavrsene sve CSS vezbe za sredu

--- a/CSS/vezba1.html
+++ b/CSS/vezba1.html
@@ -21,6 +21,12 @@
     </p>
     <p class="third">Lorem, ipsum dolor sit amet consectetur adipisicing elit. <span>This is a famous quote from some book.</span> Aliquid, voluptatem explicabo est quidem qui, quae exercitationem provident ad, sunt et atque modi dolore incidunt asperiores voluptate iusto labore. Perspiciatis, provident! LoremLorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid, voluptatem explicabo est quidem qui, quae exercitationem provident ad, sunt et atque modi dolore incidunt asperiores voluptate iusto labore. Perspiciatis, provident! Lorem
     </p>
+    <ul>
+        <li><a href="https://sr-rs.facebook.com" target="_blank">Facebook</a></li>
+        <li><a href="https://www.linkedin.com/" target="_blank">Linkedln</a></li>
+        <li><a href="https://www.google.rs/" target="_blank">Google</a></li>
+        <li><a href="https://www.instagram.com/instagram/" target="_blank">Instagram</a></li>
+    </ul>
     
 </body>
 </html>
