--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -22,14 +22,14 @@
                 aria-label="Toggle navigation">Menu
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
+            <div class="collapse navbar-collapse " id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active ">
                         <a class="nav-link" href="#">Home
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ">
                         <a class="nav-link" href="#">Features</a>
                     </li>
                     <li class="nav-item">
@@ -74,31 +74,78 @@
         </div>
     </article>
 
-    <div class="container-fluid">
+    <div class="container-fluid background-green">
         <h2>
             ABOUT
         </h2>
         <hr class="style-two">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, quod. Reiciendis, eaque animi. Quos ipsa, obcaecati commodi
-            inventore soluta, recusandae nostrum praesentium totam reiciendis excepturi adipisci vitae saepe eum sint. Lorem
-            ipsum dolor sit amet, consectetur adipisicing elit. Dolore, quod. Reiciendis, eaque animi. Quos ipsa, obcaecati
-            commodi inventore soluta, recusandae nostrum praesentium totam reiciendis excepturi adipisci vitae saepe eum
-            sint.
-        </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, quod. Reiciendis, eaque animi. Quos ipsa, obcaecati
-            commodi inventore soluta, recusandae nostrum praesentium totam reiciendis excepturi adipisci vitae saepe eum
-            sint. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, quod. Reiciendis, eaque animi. Quos ipsa,
-            obcaecati commodi inventore soluta, recusandae nostrum praesentium totam reiciendis excepturi adipisci vitae
-            saepe eum sint.
+        <div class="container">
+            <div class="row justify-content-center text-left">
+                <div class="col-12 col-lg-4">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, quod. Reiciendis, eaque animi. Quos ipsa, obcaecati commodi
+                        inventore soluta, recusandae nostrum praesentium totam reiciendis excepturi adipisci vitae saepe
+                        eum sint. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, quod. Reiciendis, eaque
+                        animi. Quos ipsa, obcaecati commodi inventore soluta, recusandae nostrum praesentium totam reiciendis
+                        excepturi adipisci vitae saepe eum sint.
+                    </p>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, quod. Reiciendis, eaque animi. Quos
+                        ipsa, obcaecati commodi inventore soluta, recusandae nostrum praesentium totam reiciendis excepturi
+                        adipisci vitae saepe eum sint. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore,
+                        quod. Reiciendis, eaque animi. Quos ipsa, obcaecati commodi inventore soluta, recusandae nostrum
+                        praesentium totam reiciendis excepturi adipisci vitae saepe eum sint.
+                    </p>
+                </div>
+            </div>
+        </div>
 
-        </p>
-
-
-
+        <button type="button" class="btn btn-outline-secondary">Secondary</button>
+    </div>
+    <div class="container">
+        <h2>CONTACT ME</h2>
+        <hr class="style-three">
+        <form action="">
+            <label for="name">Name</label>
+            <input type="text" name="name">
+            <label for="email">Email Address</label>
+            <input type="text" name="email">
+            <label for="phone">Phone Number</label>
+            <input type="text" name="phone">
+            <label for="message">Message</label>
+            <textarea type="text" name="message"></textarea>
+            <button class="btn btn-primary">Send</button>
+        </form>
     </div>
 
-
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-4">
+                    <h3>Location</h3>
+                    <p>Centar za obrazovanje
+                        <br>
+                        <span>Bit technology
+                            <br>
+                        </span> Nemanjina 4/I, Beograd
+                    </p>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <h3>Around The Web</h3>
+                    <p></p>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <h3>More Details</h3>
+                    <p>We belive the future of Serbia firmly depends on our abilty to scale the number of individuals involved
+                        in the IT sector. That is why we founded BIT.</p>
+                </div>
+                <div class="col-12 ">
+                    <p>Copyright @ Bit Student 2017</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
