Super mario i footbal i Jquery

--- a/dom, event/s4_d5/messageBoard/index.html
+++ b/dom, event/s4_d5/messageBoard/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Football</title>
+    <title>Document</title>
 </head>
-
 <body>
+    <div>
 
-    <div id="football">
-
-        <img src="images/football-player.png" alt="" id="player">
-        
-        <button>Turn OFF</button>
-    </div>
-
+    </div> 
+        <input type="text" value="">
+        <button>Send</button>
     <script src="main.js"></script>
 </body>
-
 </html>
