--- a/dom, event/s5_d1/supermario/index.html
+++ b/dom, event/s5_d1/supermario/index.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>Football</title>
+    <title>Super Mario</title>
 </head>
-
 <body>
-
-    <div id="football">
-
-        <img src="images/football-player.png" alt="" id="player">
-        
-        <button>Turn OFF</button>
+    <div id="marioContainer">
+        <img src="images/mario.png" alt="Mario">
+        <img class="hidden" src="images/mario_running.gif" alt="Running Mario">
     </div>
 
     <script src="main.js"></script>
 </body>
-
 </html>
