--- a/dom, event/s5_d1/supermario/index.html
+++ b/dom, event/s5_d1/supermario/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Super Mario</title>
 </head>
 <body>
     <div id="marioContainer">
-        <img src="images/mario.png" alt="Mario">
-        <img class="hidden" src="images/mario_running.gif" alt="Running Mario">
+        <img src="images/mario.png" alt="Mario" id="mario">
+        <img class="hidden" src="images/mario_running.gif" alt="Running Mario" id="marioHidden">
     </div>
 
     <script src="main.js"></script>
