--- a/projekti/single.html
+++ b/projekti/single.html
@@ -26,7 +26,7 @@
 
     <div class="container">
         <!--content-->
-         <h1></h1>
+        <h1></h1>
         <main>
 
             <div class="row">
@@ -34,7 +34,7 @@
                 <div class="col-12 col-md-6 imageDiv"></div>
 
                 <div class="col-12 col-md-6 asideDiv">
-                    <h3 id="season">Season</h3>
+                    <h3 id="season">Season: </h3>
                     <h3 id="cast">Cast</h3>
                 </div>
 
@@ -45,7 +45,10 @@
         </main>
 
     </div>
-
+            <footer>
+                    <p>Copyright © 2017 BIT</p>
+            </footer>
+         
 
 
 
@@ -56,6 +59,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
     <script src="js/single.js"></script>
+   
 </body>
 
 </html>
