finishing search, next step render results

--- a/projects/bitshow(vanilla)/single.html
+++ b/projects/bitshow(vanilla)/single.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-dark bg-dark justify-content-between">
 
         <div class="container">
-            <a class="navbar-brand" id="bitshow">BitShow</a>
+            <a class="navbar-brand" id="bitshow" href="index.html"> BITSHOW </a>
             <form class="form-inline">
                 <input class="form-control mr-sm-2 " type="search" placeholder="Search" aria-label="Search">
                 <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
