--- a/projects/BitShow-vanilla/index.html
+++ b/projects/BitShow-vanilla/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-  
+
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light  ml-auto">
-            <a class="navbar-brand" href="#">BitShow</a>
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="index.html">BitShow</a>
             <div class="ml-auto">
                 <form class="form-inline my-2 my-lg-0 ml-auto" autocomplete="off">
                     <input id="searchMovie" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -25,8 +25,8 @@
     </div>
     </nav>
     <ul class="searchList">
-            
-        </ul>
+
+    </ul>
     <h1>Popular Shows</h1>
     </div>
     <div class="container">
@@ -46,7 +46,7 @@
         crossorigin="anonymous"></script>
 
     <script src="js/main.js"></script>
-    
+
 </body>
 
 </html>
